spa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app 
    spec:
      containers:
        - name: angular-app-container
          image: poordev.ddns.net:5000/angular-app:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
      imagePullSecrets:
          - name: regcred
