spa-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service-label-key: service-label-value 
  name: service-name-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - name: service-port-name
    port: 80
    protocol: TCP
  selector:
    deployment-label-key: deployment-label-value #for creating a deployment in kubernetes
