spa-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-app 
  name: angular-app-service
spec:
  type: NodePort
  ports:
  - name: angular-app
    port: 80
    nodePort: 31180
    protocol: TCP
  selector:
    app: angular-app
